# book-mastering-opencv4

./: CMakeLists.txt  README.md
src/: main.cpp
